--- a/1.css
+++ b/1.css
@@ -1,5 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+
+@import url('../fonts/icon/font/flaticon.css');
+
 *{
     margin: 0%;
     padding: 0%;
@@ -31,53 +34,9 @@ body{
     background-size: cover; */
     /* background-attachment: fixed; */
 }
-header{
-    position: fixed;
-    top: 0%;
-    right: 0%;
-    width: 100%;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: transparent;
-    padding: 30px 10%;
-    transition: ease .40s;
-}
-.logo{
-    font-size: 35px;
-    font-weight: 600px;
-    letter-spacing: 1px;
-    color: var(--bg-color);
-    /* font-family: "Lexend", sans-serif;    */
-    font-family: sans-serif;
-    /* font-weight: 500; */
-    display: block;
-    margin-bottom: -15px;
-}
-.navbar{
-    display: flex;
-    align-items: center;
-}
-.navbar a{
-    color: var(--bg-color);
-    font-size: var(--p-font);
-    font-weight: 500;
-    padding: 10px 22px;
-    border-radius: 4px;
-    transition: ease .40s;
-}
-.navbar a:hover{
-    /* background: var(--bg-color); */
-    /* color: var(--text-color); */
-    text-decoration: underline;
-    box-shadow: 5px 10px 30px rgb(85 85 85/20%);
-    border-radius: 4px;
-}
-.navbar .ani_btn:hover{
-    text-decoration: none;
-    box-shadow: none;
-}
+
+
+
 
 #menu-icon{
     color: var(--bg-color);
@@ -88,6 +47,160 @@ header{
 }
 section{
     padding: 100px 10%;
+}
+header{
+    padding: 50px 10%;
+    position: relative;
+}
+.logo_nav h1{
+    font-weight: 500;
+    margin-bottom: -8px !important;
+}
+.logo_nav small{
+    color: #333 !important;
+    font-size: 14px;
+}
+.nav_main{
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+.nav_ad{
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+.ad_sub{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.ad_sub h3{
+    font-size: 20px;
+    font-weight: 500;
+}
+.ad_sub p{
+    color: #333;
+}
+.ad_sub i{
+    font-size: 40px;
+    color: #333;
+}
+
+ .btn{
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    outline: none;
+    border: 1px groove rgb(6, 6, 130);
+    background: transparent;
+    color: #0c4f9b;
+}
+.btn2{
+    border: 1px solid #fff;
+    color: #fff;
+}
+.btn:hover{
+    background: #0a4d9b;
+    /* bac */
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    transition: 0.3s;
+}
+
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* background: rgb(14, 14, 116); */
+    background: #0a4d9b;
+    padding: 20px;
+    position: absolute;
+    top: 90%;
+    left: 10%;right: 10%;
+    z-index: 1000;
+    /* width: 100%; */
+
+}
+.sticky{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    padding: 30px;
+    box-shadow: 0 0 1px #000;
+    background: #010943;
+}
+.sticky #menu-icon{
+    color: #fff !important;
+}
+.sticky .plo{
+    display: block;
+}
+.release{
+    display: none;
+}
+.nav_sub{
+    display: flex;
+    align-items: center;
+    
+}
+.menu_btn{
+    display: none;
+}
+.menu_sub{
+    display: flex;
+    align-items: center;
+}
+.menu_sub h1{
+    font-weight: 500;
+    color: #fff;
+    font-size: 24px;
+    display: none;
+}
+.menu_btn i{
+    font-size: 32px !important;
+    margin-right: 10px;
+    margin-top: 2px;
+    color: #eee;
+}
+
+.navbar ul{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.navbar ul li a{
+    font-size: 20px;
+    color: #eee;
+}
+.navbar ul li a:hover{
+    cursor: pointer;
+    color: #fff;
+    transition: 0.3s;
+
+}
+.navbar ul li a i{
+    display: none;
+}
+.navbar .social_icons {
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+
+}
+.navbar .social_icons i{
+    color: #eee;
+}
+.navbar .social_icons i:hover{
+    color: #fff;
+    cursor: pointer;
+    transition: 0.3s;
 }
 .home{
     width: 100%;
@@ -132,7 +245,6 @@ section{
     text-align: center;
 }
  .home_txt h1{
-    /* color: #FFAD00; */
     color: #fff;
     font-size: 53px;
     margin-bottom: 10px;
@@ -142,8 +254,7 @@ section{
     line-height: 32px;
     margin-bottom: 35px;
     color: #fff;
-    opacity: 0.8;
-    
+    opacity: 0.8;  
 }
 .home-btn{
     display: inline-block;
@@ -158,28 +269,8 @@ section{
     background: var(--bg-color);
     transform: scale(1.1);
 }
-header.sticky{
-    background: var(--bg-color);
-    padding: 10px 10%;
-    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
-}
-.sticky .logo{
-    color: var(--text-color);
-}
-.sticky .ani_btn_main{
-    outline: none;
-    border: none !important;
-    box-shadow: none !important;
-}
-.sticky .navbar a{
-    color: var(--text-color);
-}
-.sticky .home_logo small{
-    color: #000 !important;
-}
-.sticky .ltd{
-    color: #000 !important;
-}
+
+
 .text h2{
     font-size: var(--h2-font);
     line-height: 1.1;
@@ -330,72 +421,58 @@ header.sticky{
     font-size: 15px;
 }
 
-.abt_main_txt{
-    margin-bottom: 50px;
+.about_main{
+    display: flex;
+    align-items: center;
+    /* display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center; */
+    gap: 20px;
+    /* justify-content: space-between; */
 }
-.abt_main_txt h1{
-    text-align: center;
+/* .about_main img{
+    width: 100%;
+} */
+.about_main h1{
     font-size: 32px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.about_main p{
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 18px;
+    color: #555;
+    line-height: 32px;
+}
+.mission-goal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+.mission-goal{
+    text-align: center !important;
+    border-top: 1px solid rgba(0,0,0,0.1);
+}
+.mission-goal li{
+    width: 200px;
+    padding: 20px 30px 0 !important;
+}
+
+.mission-goal li i{
+    font-size: 65px;
     margin-bottom: 15px;
 }
-.abt_main_txt p{
-    text-align: center;
-    color: #555;
-    font-size: 16px;
+.mission-goal li h4{
+    font-size: 20px;
+    font-weight: 500;
+}
+.med{
+    border-right: 1px dotted rgba(0,0,0,0.2);
+    border-left: 1px dotted rgba(0,0,0,0.2);
 }
 
-.abt_sec{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 30px;
-}
-
-.abt_main_img{
-    min-width: 700px;
-    flex-grow: 1;
-}
-.abt_main_img img{
-    width: 100%;
-}
-.abt_txt h1{
-    font-size: 28px;
-    margin-bottom: 20px;
-    /* color: ; */
-    /* text-align: center; */
-}
-.abt_txt p{
-    font-size: 16px;
-    color: #555;
-    text-align: justify;
-    /* text-align: center; */
-}
-.abt_txt button{
-    margin-top: 50px !important;
-}
-.abt_btn_{
-    display: flex;
-    align-items: center !important;
-    /* justify-content: center; */
-}
-.abt_ser_sub{
-    display: flex;
-    gap: 10px;
-    margin-top: 20px;
-    margin-bottom: -30px;
-}
-
-.abt_exp{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-.abt_fnd{
-    display: flex;
-    align-items: center !important;
-    gap: 5px;
-    margin-top: 50px !important;
-}
 .stra_sub{
     margin-bottom: 60px;
 }
@@ -415,6 +492,7 @@ header.sticky{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
+    gap: 20px;
     
 }
 
@@ -591,8 +669,12 @@ header.sticky{
 
 @media (max-width:1400px){
     header{
-        padding: 17px 3%;
+        padding: 30px 3%;
         transition: .2s;
+    }
+    .navbar{
+        left: 3%;right: 3%;
+        /* display: none; */
     }
     header.sticky{
         padding: 10px 3%;
@@ -609,9 +691,42 @@ header.sticky{
         transition: .2s;
     }
 }
+@media(max-width:1300px){
+    .mission-goal{
+        flex-wrap: wrap;
+    }
+}
+@media(max-width:1266px){
+    .med{
+        border-right: none !important;
+    }
+}
 @media(max-width:1130px){
     .abt_ser{
         flex-wrap: wrap;
+    }
+}
+@media(max-width:1090px){
+    .nav_main{
+        justify-content: center;
+    }
+    .ad_sub h3{
+        font-size: 20px !important;
+    }
+    .ad_sub p{
+        font-size: 14px !important;
+    }
+    .ad_sub i{
+        font-size: 32px;
+    }
+    
+}
+@media(max-width:1080px){
+    .about_main img{
+        display: none !important;
+    }
+    .med{
+        border-right: 1px dotted rgba(0,0,0,0.2) !important;
     }
 }
 @media (max-width:1040px){
@@ -624,50 +739,44 @@ header.sticky{
     .home{
         height: 88vh;
     }
+    .menu_btn{
+        display: block !important;
+    }
     .navbar{
+        left: 0; right: 0;
+    }
+    .nav_links{
         position: absolute;
-        top: 0%;
-        right: -100%;
-        width: 270px;
-        height: 120vh;
-        /* background: #1067cc; */
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1004%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='url(%26quot%3b%23SvgjsLinearGradient1005%26quot%3b)'%3e%3c/rect%3e%3cpath d='M1440 0L1023.63 0L1440 119.27z' fill='rgba(255%2c 255%2c 255%2c .1)'%3e%3c/path%3e%3cpath d='M1023.63 0L1440 119.27L1440 257.32L776.53 0z' fill='rgba(255%2c 255%2c 255%2c .075)'%3e%3c/path%3e%3cpath d='M776.53 0L1440 257.32L1440 439.64L581.98 0z' fill='rgba(255%2c 255%2c 255%2c .05)'%3e%3c/path%3e%3cpath d='M581.98 0L1440 439.64L1440 466.11L172.20000000000005 0z' fill='rgba(255%2c 255%2c 255%2c .025)'%3e%3c/path%3e%3cpath d='M0 560L283.92 560L0 554.32z' fill='rgba(0%2c 0%2c 0%2c .1)'%3e%3c/path%3e%3cpath d='M0 554.32L283.92 560L493.69000000000005 560L0 500.1z' fill='rgba(0%2c 0%2c 0%2c .075)'%3e%3c/path%3e%3cpath d='M0 500.1L493.69000000000005 560L578.34 560L0 322.41z' fill='rgba(0%2c 0%2c 0%2c .05)'%3e%3c/path%3e%3cpath d='M0 322.40999999999997L578.34 560L1127.3600000000001 560L0 319.08z' fill='rgba(0%2c 0%2c 0%2c .025)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1004'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='15.28%25' y1='-39.29%25' x2='84.72%25' y2='139.29%25' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient1005'%3e%3cstop stop-color='%230e2a47' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(0%2c 111%2c 255%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
-        background-repeat: no-repeat;
-        background-size: cover;
-        /* background: #000000dd; */
-        flex-direction: column;
-        align-items: center;
-        padding: 150px 30px;
-        transition: 0.5s all;
+        top: 100%;
+        background: #fff;
+        left: 0;
+        right: 0;
+        display: block !important;
+        visibility: hidden;
+        
     }
-    .navbar a{
-        display: block;
-        margin: 1.2rem 0;
+    .nav_links li{
+        padding: 10px 23px !important;
+        border-bottom: 1px solid rgba(0,0,0,0.1);
     }
-    .sticky .navbar a{
-        color: var(--bg-color);
+    .nav_links li a{
+        color: #000 !important;
+        
     }
-    .navbar a:hover{
-        /* color: var(--text-color); */
-        color: #FFAD00;
+    .nav_links li a i{
+        display: block !important;
+        float: right;
     }
-    .open{
-        right: 0%;
-    }
-    .list{
-        width: 50%;
-        margin-bottom: 12px;
-    }
-    .ani_btn_none{
+    .nav_links li a span{
         display: none;
     }
+    .nav_links.open{
+        visibility: visible;
+        transition: 0.3s;
+    }
+    
 }
 
-/* @media(max-width:1023px){
-    .form_inp input{
-        width: 100%;
-    }
-} */
 @media(max-width:1024px){
     .ser_vices{
         display: flex;
@@ -687,12 +796,8 @@ header.sticky{
     .ser_card_text{
         text-align: center;
     }
-    .about_main{
-        flex-wrap: wrap;
-        gap: 40px;
-        text-align: center;
-    }
-    .abt_txt .abt{
+ 
+    /* .abt_txt .abt{
         margin-bottom: 40px ;
     }
     .abt_txt .abt p{
@@ -710,7 +815,7 @@ header.sticky{
     .abt_exp{
         justify-content: center;
         flex-wrap: wrap;
-    }
+    } */
     .counts_sub{
         flex-wrap: wrap;
         justify-content: center ;
@@ -750,22 +855,11 @@ header.sticky{
     .form_inp{
         justify-content: space-between !important;
     }
-    /* .form_main label{
-        width: 100%;
-    } */
-    /* .form_inp span{
-        width: 100%;
-    } */
-    /* .form_inp{
-        width: 100%;
-    } */
     .form_inp input{
         width: 400px !important;
     }
 
-    /* .inp_a{
-        width: 100% !important;
-    } */
+
     .client_txt_main{
         padding: 0px;
     }
@@ -774,10 +868,6 @@ header.sticky{
     }
     .client_txt h2{
         font-size: 32px;
-        /* text-align: center; */
-        /* display: flex; */
-        /* flex-wrap: wrap !important; */
-        /* text-align: center; */
     }
     .client_txt p{
         text-align: center;
@@ -788,17 +878,11 @@ header.sticky{
     #blog_card{
         flex-wrap: wrap ;
         gap: 20px;
-        /* row-gap: 30px; */
     }
     .head_flex{
         justify-content: center;
     }
-    /* #a,#b,#c,#d,#e{
-        width: 100% !important;
-    } */
     .main{
-        /* justify-content: space-evenly !important; */
-        /* display: fle; */
         justify-content: flex-start;
     }
     .abt_ser_sub{
@@ -807,16 +891,27 @@ header.sticky{
 
 }
 @media(max-width:980px){
-    /* .form_inp input{
-        width: 100% !important;
+    .home_txt h1{
+        font-size: 42px;
+     }
+     .about_main p{
+        font-size: 16px !important;
+     }
+     .stra_icons img{
+        width: 80px !important;
+     }
+     .ser_card_sub{
+        text-align: center !important;
+    }
+    .ser_card_sub p{
+        text-align: center !important;
+    }
+    .serv_imgs{
+        margin: 0 auto !important;
+    }
+    /* .sticky{
+        padding: 25px !important;
     } */
-    .form_inp{
-        display: block;
-    }
-    .form_inp input{
-        width: 100% !important;
-        margin-bottom: 10px;
-    }
 }
 @media(max-width:850px){
     .serv_card_sub{
@@ -847,15 +942,15 @@ header.sticky{
         margin-bottom: 10px;
     }
 }
-/* @media(max-width:550px){
-    .form_inp{
-        display: block;
+
+@media(max-width:805px){
+    .nav_ad{
+        display: none;
     }
-    .form_inp input{
-        width: 100% !important;
-        margin-bottom: 10px;
+    .navbar{
+        left: 0;right: 0;
     }
-} */
+}
 @media(max-width:768px){
     /* #tech{
       
@@ -873,6 +968,25 @@ header.sticky{
     }
     .tech_svg{
         fill: #ffffffe3;
+    }
+}
+/* @media(max-width:756px){
+    
+    .ser_card_sub{
+        text-align: center !important;
+    }
+    .ser_card_sub p{
+        text-align: center !important;
+    }
+  
+
+    .serv_imgs{
+        margin: 0 auto !important;
+    }
+} */
+@media (max-width:680px){
+    .med{
+        border-right: none !important;
     }
 }
 @media (max-width:575px){
@@ -894,48 +1008,32 @@ header.sticky{
         height: 85vh;
         transition: .2s;
     }
-    /* .ser_sub_text h5{
-        margin-bottom: 5px !important; 
-    }
-    .ser_sub_text h4{
-        margin-bottom: -5px ;
-    }
-    .ser_sub_serv{
-        margin-bottom: 10px;
-    }
-    .ser_sub_serv a{
-        gap: 10px;
-        padding: 10px 15px;
-    } */
-    /* .client_txt_main{
-        padding: 0 !important;
-    }
-    .ser_card{
-        padding: 10px 5px!important;
-        width: 100%;
-    }
-     */
-     /* #contact{
-        text-align: center;
-    } */
-    /* .main{
-        justify-content: center;
-    } */
-    #contact{
-        text-align: center;
-        /* justify-content: center !important; */
-    }
     .list h4::before{
         left: 50%;
         transform: translateX(-50%);
     }
 }
-@media(max-width:500px){
+@media(max-width:630px){
     #home{
         text-align: center;
         height: auto;
         padding-bottom: 30px;
     }
+}
+@media(max-width:469px){
+    .med{
+        border-right: 1px dotted rgba(0,0,0,0.2) !important;
+    }
+    .mission-goal{
+        row-gap: 10px !important;
+    }
+    .mission-goal li i{
+        font-size: 45px;
+     }
+     .ico_bdr{
+        border-right: 1px dotted rgba(0,0,0,0.2);
+        border-left: 1px dotted rgba(0,0,0,0.2);
+     }
 }
 @media(max-width:400px){
     #contact{
@@ -957,6 +1055,11 @@ header.sticky{
     .serv_card_sub_2{
         padding-bottom: 20px !important;
         height: auto !important;
+    }
+}
+@media(max-width:370px){
+    .sticky .plo{
+        display: none !important;
     }
 }
 @media(max-width:325px){
